whoami/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingress
  namespace: whoami
spec:
  routes:
    - kind: Rule
      match: Host(`whoami.moat`)
      services:
        - kind: Service
          name: whoami
          port: 80
